--- a/persistent-volume-claim.yaml
+++ b/persistent-volume-claim.yaml
@@ -1,9 +1,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: nfs-pv-provisioning
+  name: nfs-pvc
 spec:
-  accessModes: [ "ReadWriteOnce" ]
+  accessModes: 
+    - ReadWriteMany
   resources:
     requests:
       storage: 20Gi
