--- a/persistent-volume.yaml
+++ b/persistent-volume.yaml
@@ -1,14 +1,13 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: nfs
+  name: nfs-pv
 spec:
   capacity:
-    storage: 1Mi
+    storage: 20Gi
   accessModes:
     - ReadWriteMany
+  storageClassName: standard
   nfs:
     server: nfs-server.default.svc.cluster.local
     path: "/"
-  mountOptions:
-    - nfsvers=4.2
