--- a/polls.yaml
+++ b/polls.yaml
@@ -1,27 +1,3 @@
-# Copyright 2020 Google Inc.
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License
-
-# This file configures the polls application . The frontend serves
-# public web traffic.
-
-# The bookshelf frontend replication controller ensures that at least 3
-# instances of the bookshelf app are running on the cluster.
-# For more info about Pods see:
-#   https://kubernetes.io/docs/concepts/workloads/pods/
-# For more info about Deployments:
-#   https://kubernetes.io/docs/user-guide/deployments/
-
 # [START kubernetes_deployment]
 apiVersion: apps/v1
 kind: Deployment
@@ -42,7 +18,7 @@ spec:
       containers:
       - name: polls-app
         # Replace  with your project ID or use `make template`
-        image: gcr.io/django-k8s-360705/polls
+        image: gcr.io/django-k8s-361403/polls
         # This setting makes nodes pull the docker image every time before
         # starting the pod. This is useful when debugging, but should be turned
         # off in production.
@@ -64,6 +40,11 @@ spec:
                 secretKeyRef:
                   name: cloudsql
                   key: password
+            - name: GOOGLE_CLOUD_PROJECT
+              valueFrom:
+                secretKeyRef:
+                  name: cloudsql
+                  key: projectid
             # [END cloudsql_secrets]
         ports:
         - containerPort: 8080
@@ -76,10 +57,10 @@ spec:
       - image: gcr.io/cloudsql-docker/gce-proxy:1.16
         name: cloudsql-proxy
         command: ["/cloud_sql_proxy", "--dir=/cloudsql",
-                  "-instances=django-k8s-360705:us-central1:django-k8s=tcp:5432",
+                  "-instances=django-k8s-361403:us-central1:django-k8s=tcp:5432",
                   "-credential_file=/secrets/cloudsql/credentials.json"]
         volumeMounts:
-          - name: cloudsql-oauth-credentials
+          - name: cloudsql-credentials-json
             mountPath: /secrets/cloudsql
             readOnly: true
           - name: ssl-certs
@@ -89,9 +70,9 @@ spec:
       # [END proxy_container] 
       # [START volumes]
       volumes:
-        - name: cloudsql-oauth-credentials
+        - name: cloudsql-credentials-json
           secret:
-            secretName: cloudsql-oauth-credentials
+            secretName: cloudsql-credentials-json
         - name: ssl-certs
           hostPath:
             path: /etc/ssl/certs
@@ -99,7 +80,7 @@ spec:
           emptyDir: {}
         - name: pvc-storage-vol
           persistentVolumeClaim:
-            claimName: nfs-pv-provisioning
+            claimName: nfs-pvc
       # [END volumes]        
 # [END kubernetes_deployment]
 
