--- a/storage-class.yaml
+++ b/storage-class.yaml
@@ -5,8 +5,8 @@ metadata:
 provisioner: kubernetes.io/gce-pd
 volumeBindingMode: Immediate
 allowVolumeExpansion: true
-reclaimPolicy: Delete
+reclaimPolicy: Retain
 parameters:
-  type: pd-standard
+  type: pd-ssd
   fstype: ext4
   replication-type: none
